--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -5,5 +5,22 @@
     "tourism": "السياحة",
     "welcome": "مرحبا بكم في سوريا",
     "des": "الطبيعة والحضارات",
-    "discover": "استكشف معنا سورية"
+    "discover": "استكشف معنا سورية",
+    "old": [
+        {
+        "name": "قلعة حلب",
+        "des": "قلعة حلب قصر محصن يعود إلى العصور الوسطى. تعدُّ قلعة حلب إحدى أقدم وأكبر القلاع في العالم، يعود استخدام التل الذي تتموضع عليه القلعة إلى الألفية الثالثة قبل الميلاد، واحتلتها فيما بعد العديد من الحضارات كالإغريق والبيزنطيين والمماليك والأيوبيين، بينما يظهر أن أغلب البناء الحالي يعود إلى الفترة الأيوبية. أجرت عليها مؤسسة آغا خان للثقافة والجمعية الأثرية في حلب عمليات حفظ واسعة في عام 2000. تقع القلعة في مركز المدينة القديمة التي أدرجتها منظمة اليونسكو على لائحة مواقع التراث العالمي عام 1986.",
+        "img": "https://wmf.imgix.net/images/b3_SYR_Cit_Aleppo_JPEG_Hero_SYR_Cit_Aleppo.jpg?auto=format,compress&fit=max&w=1024"
+      },
+     {
+        "name": "قلعة الحصن",
+        "des": "قلعة الحصن هي قلعة كاثوليكية تعود لفترة الحروب الصليبية، تقع ضمن سلاسل جبال الساحل في محافظة حمص في سوريا، وتبعد عن مدينة حمص 60 كم، ونظرًا للأهمية التاريخية والعمرانية للحصن فقد اعتبرتها منظمة اليونسكو قلعة تاريخية هامة لاحتوائها على تراثٍ إنساني عظيم، وفي عام 2006 م سُجلت القلعة على لائحة التراث العالمي إلى جانب قلعة صلاح الدين الأيوبي",
+        "img": "https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Krak_des_Chevaliers_landscape_%28cropped%29.jpg/1920px-Krak_des_Chevaliers_landscape_%28cropped%29.jpg"
+      },
+       {
+        "name": "قلعة صلاح الدين",
+        "des": "قلعة صلاح الدين الأيوبي أو قلعة صهيون إحدى قلاع جبال الساحل السوري في محافظة اللاذقية في سوريا. تتربع فوق قمة مرتفعة وتحيط بها الغابات والمناظر الرائعة وكانت تسمى لزمن غير قصير بقلعة صهيون أو السون، وأصبحت اليوم تحمل اسم قلعة صلاح الدين الأيوبي تيمناً بذكرى القائد الإسلامي الكردي صلاح الدين الأيوبي. وفي عام 2006 مـ سجلت القلعة على لائحة التراث العالمي إلى جانب قلعة الحصن",
+        "img": "https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Citadel_of_Salah_Ed-din.jpg/1920px-Citadel_of_Salah_Ed-din.jpg"
+      }
+    ]
 }
