--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -3,7 +3,7 @@
     "about": "حول",
     "contact": "اتصل بنا",
     "tourism": "السياحة",
-    "welcome": "مرحبا بكم في سوريا",
+    "welcome": "مرحبا بكم في سورية",
     "des": "الطبيعة والحضارات",
     "discover": "استكشف معنا سورية",
     "old": [
