--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -22,5 +22,10 @@
         "des": "قلعة صلاح الدين الأيوبي أو قلعة صهيون إحدى قلاع جبال الساحل السوري في محافظة اللاذقية في سوريا. تتربع فوق قمة مرتفعة وتحيط بها الغابات والمناظر الرائعة وكانت تسمى لزمن غير قصير بقلعة صهيون أو السون، وأصبحت اليوم تحمل اسم قلعة صلاح الدين الأيوبي تيمناً بذكرى القائد الإسلامي الكردي صلاح الدين الأيوبي. وفي عام 2006 مـ سجلت القلعة على لائحة التراث العالمي إلى جانب قلعة الحصن",
         "img": "https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Citadel_of_Salah_Ed-din.jpg/1920px-Citadel_of_Salah_Ed-din.jpg"
       }
-    ]
+    ],
+    "castles": "القلاع",
+    "mosques": "المساجد",
+    "churches": "الكنائس",
+    "nature": "الطبيعة"
+
 }
