add some castles

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -26,6 +26,28 @@
     "castles": "القلاع",
     "mosques": "المساجد",
     "churches": "الكنائس",
-    "nature": "الطبيعة"
+    "nature": "الطبيعة",
+    "castlesList": [
+        {
+        "name": "قلعة حلب"
+      },
+     {
+        "name": "قلعة الحصن"
+      },
+       {
+        "name": "قلعة صلاح الدين"
+      }
+    ],
+    "mosquesList": [
+      {
+      "name": "جامع بني أمية الكبير"
+    },
+   {
+      "name": "جامع البطرني"
+    },
+     {
+      "name": "جامع الحنابلة"
+    }
+  ]
 
 }
