edit logo and add SAR

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -1,11 +1,11 @@
 {
-  "syria": "سورية",
+  "syria": "مرحبا بكم في سورية",
   "home": "الرئيسية",
   "about": "حول",
   "contact": "اتصل بنا",
   "tourism": "السياحة",
-  "welcome": "مرحبا بكم في سورية",
-  "des": "الطبيعة والحضارات",
+  "welcome": "البوابة الى الحضارات",
+  "des": "الطبيعة و التاريخ",
   "discover": "استكشف معنا سورية",
   "old": [
     {
