--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -101,5 +101,13 @@
       "name": "كنيسة مار تقلا - معلولا",
       "link": "https://ar.wikipedia.org/wiki/%D9%83%D9%86%D9%8A%D8%B3%D8%A9_%D9%85%D8%A7%D8%B1_%D8%AA%D9%82%D9%84%D8%A7"
     }
+  ],
+  "Homs":[
+    {"id": 1, "lat": 34.736796994734185, "lng": 36.71582848999782, "type": "mosque" },
+    {"id": 2, "lat": 34.758672718865576, "lng": 36.29463303022307, "type": "castle" },
+    {"id": 3, "lat": 34.57167685281546, "lng": 38.2898373552371, "type": "castle" },
+    {"id": 4, "lat": 34.83517609735017, "lng": 36.86589766974049, "type": "castle" },
+    {"id": 5, "lat": 34.23609685093386, "lng": 37.224991813873174, "type": "churches" },
+    {"id": 6, "lat": 34.729325308729194, "lng": 36.71984124020588, "type": "churches" }
   ]
 }
