add some old places

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -24,7 +24,7 @@
       "img": "https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Citadel_of_Salah_Ed-din.jpg/1920px-Citadel_of_Salah_Ed-din.jpg"
     }
   ],
-  "castles": "القلاع",
+  "castles": "أماكن اثرية",
   "mosques": "المساجد",
   "churches": "الكنائس",
   "nature": "الطبيعة",
@@ -102,12 +102,153 @@
       "link": "https://ar.wikipedia.org/wiki/%D9%83%D9%86%D9%8A%D8%B3%D8%A9_%D9%85%D8%A7%D8%B1_%D8%AA%D9%82%D9%84%D8%A7"
     }
   ],
-  "Homs":[
-    {"id": 1, "lat": 34.736796994734185, "lng": 36.71582848999782, "type": "mosque" },
-    {"id": 2, "lat": 34.758672718865576, "lng": 36.29463303022307, "type": "castle" },
-    {"id": 3, "lat": 34.57167685281546, "lng": 38.2898373552371, "type": "castle" },
-    {"id": 4, "lat": 34.83517609735017, "lng": 36.86589766974049, "type": "castle" },
-    {"id": 5, "lat": 34.23609685093386, "lng": 37.224991813873174, "type": "churches" },
-    {"id": 6, "lat": 34.729325308729194, "lng": 36.71984124020588, "type": "churches" }
+  "discoverPlaces": [
+    {
+      "id": 1,
+      "name": "مسجد خالد بن الوليد",
+      "lat": 34.736796994734185,
+      "lng": 36.71582848999782,
+      "type": "mosque"
+    },
+    {
+      "id": 2,
+      "name": "قلعة الحصن",
+      "lat": 34.758672718865576,
+      "lng": 36.29463303022307,
+      "type": "castle"
+    },
+    {
+      "id": 3,
+      "name": "تدمر",
+      "lat": 34.57167685281546,
+      "lng": 38.2898373552371,
+      "type": "castle"
+    },
+    {
+      "id": 4,
+      "name": "قطنة",
+      "lat": 34.83517609735017,
+      "lng": 36.86589766974049,
+      "type": "castle"
+    },
+    {
+      "id": 5,
+      "name": "دير مار إليان",
+      "lat": 34.23609685093386,
+      "lng": 37.224991813873174,
+      "type": "churches"
+    },
+    {
+      "id": 6,
+      "name": "كنيسة أم الزنار",
+      "lat": 34.729325308729194,
+      "lng": 36.71984124020588,
+      "type": "churches"
+    },
+    {
+      "id": 7,
+      "name": "قلعة حلب",
+      "lat": 36.199634954914536,
+      "lng": 37.1630003121152,
+      "type": "castle"
+    },
+    {
+      "id": 8,
+      "name": "الجامع الأموي الكبير",
+      "lat": 36.19955783558097,
+      "lng": 37.15685300845336,
+      "type": "mosque"
+    },
+    {
+      "id": 9,
+      "name": "كنيسة الأربعون شهيد",
+      "lat": 36.20616245795342,
+      "lng": 37.15526587314695,
+      "type": "churches"
+    },
+    {
+      "id": 10,
+      "name": "دير سمعان",
+      "lat": 36.33242171287732,
+      "lng": 36.84326854177375,
+      "type": "castle"
+    },
+    {
+      "id": 11,
+      "name": "عين دارة",
+      "lat": 36.45949170966121,
+      "lng": 36.852284725617854,
+      "type": "castle"
+    },
+    {
+      "id": 12,
+      "name": "قلعة النبي هوري سيروس",
+      "lat": 36.616562104321716,
+      "lng": 36.93652406430334,
+      "type": "castle"
+    },
+    {
+      "id": 13,
+      "name": "قلعة صلاح الدين الأيوبي",
+      "lat": 35.596181150448594,
+      "lng": 36.05738626903014,
+      "type": "castle"
+    },
+    {
+      "id": 14,
+      "name": "أوغاريت",
+      "lat": 35.60222370319752,
+      "lng": 35.78505009285952,
+      "type": "castle"
+    },
+    {
+      "id": 15,
+      "name": "قلعة المرقب",
+      "lat": 35.15111564179859,
+      "lng": 35.949452481396776,
+      "type": "castle"
+    },
+    {
+      "id": 16,
+      "name": "قلعة الكهف",
+      "lat": 35.044831913452406,
+      "lng": 36.083055133210074,
+      "type": "castle"
+    },
+    {
+      "id": 17,
+      "name": "حصن سليمان",
+      "lat": 34.93040674189269,
+      "lng": 36.24528055087749,
+      "type": "castle"
+    },
+    {
+      "id": 18,
+      "name": "عمريت",
+      "lat": 34.8389025172828,
+      "lng": 35.90692012332808,
+      "type": "castle"
+    },
+    {
+      "id": 19,
+      "name": "قلعة أرواد",
+      "lat": 34.85604899074056,
+      "lng": 35.858573893312304,
+      "type": "castle"
+    },
+    {
+      "id": 20,
+      "name": "قلعة بحمور",
+      "lat": 34.81202742736245,
+      "lng": 35.970380423458096,
+      "type": "castle"
+    },
+    {
+      "id": 21,
+      "name": "الخوابي",
+      "lat": 34.97282277547203,
+      "lng": 36.00218872578407,
+      "type": "castle"
+    }
   ]
 }
