fix state onclick and show info

--- a/src/lang/ar.json
+++ b/src/lang/ar.json
@@ -250,5 +250,106 @@
       "lng": 36.00218872578407,
       "type": "castle"
     }
-  ]
+  ],
+  "StateInfo": [
+    {
+        "id": "Damascus",
+        "name": "دمشق",
+        "description": "عاصمة سوريا وأقدم عاصمة مأهولة في التاريخ، مركز سياسي وثقافي",
+        "area": 105,
+        "people": 1750000
+    },
+    {
+        "id": "RefDamascus",
+        "name": "ريف دمشق",
+        "description": "تحيط بالعاصمة دمشق وتتميز بتنوعها الجغرافي بين السهول والجبال",
+        "area": 18018,
+        "people": 2779000
+    },
+    {
+        "id": "Aleppo",
+        "name": "حلب",
+        "description": "أكبر مدن سوريا، تشتهر بتاريخها العريق وصناعاتها التقليدية",
+        "area": 19000,
+        "people": 2000000
+    },
+    {
+        "id": "Homs",
+        "name": "حمص",
+        "description": "تقع في وسط سوريا وتعرف بتنوعها الثقافي وموقعها الاستراتيجي",
+        "area": 42223,
+        "people": 1800000
+    },
+    {
+        "id": "Hama",
+        "name": "حماة",
+        "description": "مدينة النواعير وتشتهر بالزراعة والتاريخ العريق",
+        "area": 8880,
+        "people": 1550000
+    },
+    {
+        "id": "Latakia",
+        "name": "اللاذقية",
+        "description": "مدينة ساحلية وميناء رئيسي، تشتهر بالسياحة والجمال الطبيعي",
+        "area": 2297,
+        "people": 1300000
+    },
+    {
+        "id": "Tartus",
+        "name": "طرطوس",
+        "description": "مدينة ساحلية هادئة، تشتهر بالصيد والزراعة",
+        "area": 1890,
+        "people": 930000
+    },
+    {
+        "id": "Idlib",
+        "name": "إدلب",
+        "description": "تعرف بريفها الخصب وزيتونها الوفير",
+        "area": 6100,
+        "people": 1600000
+    },
+    {
+        "id": "Daraa",
+        "name": "درعا",
+        "description": "تقع في الجنوب وتعتبر مهد الثورة السورية",
+        "area": 3730,
+        "people": 1000000
+    },
+    {
+        "id": "Suwayda",
+        "name": "السويداء",
+        "description": "تقع في الجنوب الشرقي وتتميز بالطبيعة الجبلية",
+        "area": 5550,
+        "people": 750000
+    },
+    {
+        "id": "Quneitra",
+        "name": "القنيطرة",
+        "description": "تقع على الحدود مع الجولان المحتل، تتميز بالطبيعة الخلابة",
+        "area": 1200,
+        "people": 90000
+    },
+    {
+        "id": "DayrAzZawr",
+        "name": "دير الزور",
+        "description": "تقع على نهر الفرات وتشتهر بالنفط والزراعة",
+        "area": 33400,
+        "people": 1400000
+    },
+    {
+        "id": "Raqqah",
+        "name": "الرقة",
+        "description": "تقع في شمال سوريا، تشتهر بالزراعة",
+        "area": 19618,
+        "people": 1000000
+    },
+    {
+        "id": "Hasaka",
+        "name": "الحسكة",
+        "description": "تقع في شمال شرق سوريا، تتميز بالتنوع الثقافي",
+        "area": 23334,
+        "people": 1550000
+    }
+]
+
 }
